@@ -12,7 +12,7 @@ set(PROJECT1.01 project1.01/src/main.c)
 set(PROJECT1.02 project1.02/src/main.c)
 set(PROJECT1.03 project1.03/src/main.c project1.03/src/dungeon.c project1.03/src/dungeon.h project1.03/src/globals.h project1.03/src/path.c project1.03/src/path.h project1.03/src/binheap.c project1.03/src/binheap.h project1.03/src/utils.c project1.03/src/utils.h)
 set(PROJECT1.04 project1.04/src/main.c project1.04/src/dungeon.c project1.04/src/path.c project1.04/src/binheap.c project1.04/src/utils.c project1.04/src/movement.c project1.04/src/monster.c project1.04/src/turn.c)
-set(PROJECT1.05 project1.05/src/main.c project1.05/src/dungeon.c project1.05/src/path.c project1.05/src/binheap.c project1.05/src/utils.c project1.05/src/movement.c project1.05/src/monster.c project1.05/src/turn.c)
+set(PROJECT1.05 project1.05/src/main.c project1.05/src/dungeon.c project1.05/src/path.c project1.05/src/binheap.c project1.05/src/utils.c project1.05/src/movement.c project1.05/src/monster.c project1.05/src/turn.c project1.05/src/screen.c)
 find_package(Curses REQUIRED)
 #include_directories()
 #set(PROJECT1 project1.c)
