@@ -1,0 +1,11 @@
+//
+// Created by joelm on 2016-03-07.
+//
+
+#ifndef PROJECT_SCREEN_H
+#define PROJECT_SCREEN_H
+
+void initTerminal();
+void screenClearRow(int row);
+
+#endif //PROJECT_SCREEN_H
