@@ -1,4 +1,7 @@
 2016-03-07
+All possible user input in handled.  Still need a method to print all monsters.
+
+2016-03-07
 PC movement is controlled by a human!
 
 2016-03-07
